--- a/.gitignore
+++ b/.gitignore
@@ -57,4 +57,8 @@ typings/
 # dotenv environment variables file
 .env
 
+# YouCompleteMe javascript autocomplete file
+.tern-project
+
+# YouCompleteMe javascript autocomplete file
 .tern-project
